--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -101,6 +101,13 @@ $contentWidth: 1000px
   margin: auto
   margin-top: 60px
 
+.change-lang
+  position: fixed
+  bottom: 10px
+  left: 20px
+  font-size: 13px
+  text-align: left
+
 .created-by-text
   position: fixed
   bottom: 10px
