--- a/src/app/components/misc/app-info/app-info.component.html
+++ b/src/app/components/misc/app-info/app-info.component.html
@@ -1,10 +1,8 @@
 <h1>
-  Find and match with people by personality and interests.
+  {{ 'Find and match with people by personality and interests.' | translate }}
 </h1>
 <p>
-  Because compatability matters.
-  Automatically show people with high compatability percentage to you.
-  <br>
-  <br>
-  Completely free.
+  {{ 'Because compatability matters. Automatically show people with high compatability percentage to you.' | translate }}
+  <br/><br/>
+  {{ 'Completely free.' | translate }}
 </p>
