--- a/src/app/components/pages/find-people-page/find-people-page.component.html
+++ b/src/app/components/pages/find-people-page/find-people-page.component.html
@@ -1,9 +1,9 @@
-<h1>Find people <span *ngIf="searchPref && searchPref.location">in {{searchPref.location.fullName}}</span>
+<h1>{{ 'Find people' | translate }} <span *ngIf="searchPref && searchPref.location">{{ 'in' | translate }} {{ searchPref.location.fullName }}</span>
   <fa-icon [icon]="faSearchPref" (click)="openModal(content)" style="cursor: pointer; margin-left: 10px;"></fa-icon>
 </h1>
 
 <loader *ngIf="loading"></loader>
-<div *ngIf="!loading && users.length == 0">No people were found.</div>
+<div *ngIf="!loading && users.length == 0">{{ 'No people were found.' | translate }}</div>
 <div>
   <user-item *ngFor="let user of users" [user]="user"></user-item>
 
@@ -17,7 +17,7 @@
     <span class="close" aria-label="Close" style="position: absolute; top: -30px;right: 0; color: #fff; cursor: pointer;" (click)="modal.dismiss('Cross click')">&times;</span>
 
     <div>
-      <h4>Age</h4>
+      <h4>{{ 'Age' | translate }}</h4>
       <div class="row">
         <div class="col-6">
           <select class="form-control" [value]="editSearchPref.fromAge" (change)="changePref('fromAge', +$event.target.value)">
@@ -32,11 +32,11 @@
       </div>
       <div style="margin-top: 30px">
 
-      <h4>City</h4>
+      <h4>{{ 'City' | translate }}</h4>
         <location-select [location]="editSearchPref.location" (locationChanged)="locationChanged($event)"></location-select>
       </div>
     </div>
 
-    <button class="btn btn-primary" style="width: 100%; margin-top: 20px;" (click)="saveSearchPref()">Save</button>
+    <button class="btn btn-primary" style="width: 100%; margin-top: 20px;" (click)="saveSearchPref()">{{ 'Save' | translate }}</button>
   </div>
 </ng-template>
