--- a/src/app/components/pages/onboarding-page/onboarding-page.component.html
+++ b/src/app/components/pages/onboarding-page/onboarding-page.component.html
@@ -1,33 +1,33 @@
 <div *ngIf="1 == step && showIntroText">
-  <h2 class="section-title">Onboarding</h2>
+  <h2 class="section-title">{{ 'Onboarding' | translate }}</h2>
   <div class="alert alert-info" role="alert">
-    Please take some time as the onboarding process will take arond 10-20 min.
+    {{ 'Please take some time as the onboarding process will take arond 10-20 min.' | translate }}
     <br>
-    There are 4 steps and the progress is saved till your current step. You can return and continue any time.
+    {{ 'There are 4 steps and the progress is saved till your current step. You can return and continue any time.' | translate }}
   </div>
   <div class="info-button-cont">
-    <button class="btn btn-primary" (click)="showIntroText = false">Start</button>
+    <button class="btn btn-primary" (click)="showIntroText = false">{{ 'Start' | translate }}</button>
   </div>
 </div>
 
 <div *ngIf="1 == step && !showIntroText">
-  <h2 class="section-title">Account Info ({{targetStep}})</h2>
+  <h2 class="section-title">{{ 'Account Info' | translate }} ({{ 'Step' | translate }} {{ step + '/' + TOTAL_STEPS }})</h2>
   <div class="onboarding-step-cont border shadow-sm">
     <form [formGroup]="accountInfoForm">
       <div class="row">
         <div class="col-sm-6">
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">I am</label>
+            <label for="inputPassword" class="col-sm-4 col-form-label">{{ 'I am' | translate }}</label>
             <div class="col-sm-8">
               <div class="radio">
-                <label><input type="radio" value="male" name="gender" formControlName="gender">Male</label>
+                <label><input type="radio" value="male" name="gender" formControlName="gender">{{ 'Male' | translate }}</label>
               </div>
               <div class="radio">
-                <label><input type="radio" value="female" name="gender" formControlName="gender">Female</label>
+                <label><input type="radio" value="female" name="gender" formControlName="gender">{{ 'Female' | translate }}</label>
               </div>
               <div>
                 <small *ngIf="gender.invalid && (gender.dirty || gender.touched)" class="text-danger">
-                  Required field
+                  {{ 'Required field' | translate }}
                 </small>
               </div>
             </div>
@@ -35,20 +35,20 @@
         </div>
         <div class="col-sm-6">
           <div class="form-group row">
-            <label for="inputPassword" class="col-sm-4 col-form-label">Looking for</label>
+            <label for="inputPassword" class="col-sm-4 col-form-label">{{ 'Looking for' | translate }}</label>
             <div class="col-sm-8">
               <div class="radio">
                 <label><input type="radio" value="male" name="interested_in"
-                    formControlName="interested_in">Male</label>
+                    formControlName="interested_in">{{ 'Male' | translate }}</label>
               </div>
               <div class="radio">
                 <label><input type="radio" value="female" name="interested_in"
-                    formControlName="interested_in">Female</label>
+                    formControlName="interested_in">{{ 'Female' | translate }}</label>
               </div>
               <div>
                 <small *ngIf="interested_in.invalid && (interested_in.dirty || interested_in.touched)"
                   class="text-danger">
-                  Required field
+                  {{ 'Required field' | translate }}
                 </small>
               </div>
             </div>
@@ -57,104 +57,104 @@
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Birthday</label>
+        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Birthday' | translate }}</label>
         <div class="col-sm-10">
           <date-picker [date]="birthday.value" (dateChange)="dateChange($event)"></date-picker>
           <div>
             <small *ngIf="gender.invalid && (gender.dirty || gender.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Title</label>
+        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'Title' | translate }}</label>
         <div class="col-sm-10">
           <div class="radio">
             <input class="form-control" type="text" name="title" formControlName="title"
-              placeholder="Your job, education...">
+              placeholder="{{ 'Your job, education...' | translate }}">
           </div>
           <div>
             <small *ngIf="title.invalid && (title.dirty || title.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">About me</label>
+        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'About' | translate }}</label>
         <div class="col-sm-10">
           <div class="radio">
             <textarea class="form-control" name="description" formControlName="description"
-              placeholder="Tell something about you"></textarea>
+              placeholder="{{ 'Tell something about you' | translate }}"></textarea>
           </div>
           <div>
             <small *ngIf="description.invalid && (description.dirty || description.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
       </div>
 
       <div class="form-group row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">From</label>
+        <label for="inputPassword" class="col-sm-2 col-form-label">{{ 'From' | translate}}</label>
         <div class="col-sm-10">
           <div class="radio">
             <location-select [location]="location" (locationChanged)="locationChanged($event)"></location-select>
           </div>
           <div>
             <small *ngIf="city.invalid && (city.dirty || city.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
       </div>
     </form>
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveAccountInfo()" [disabled]="loading">Save</button>
+      <button class="btn btn-primary" (click)="saveAccountInfo()" [disabled]="loading">{{ 'Save' | translate }}</button>
       <div class="clearfix"></div>
     </div>
   </div>
 </div>
 
 <div *ngIf="2 == step" class="ob-small">
-  <h2 class="section-title">Profile Info ({{targetStep}})</h2>
+  <h2 class="section-title">{{ 'Profile Info' | translate }} ({{ 'Step' | translate }} {{ step + '/' + TOTAL_STEPS }})</h2>
   <div class="onboarding-step-cont border shadow-sm">
     <form [formGroup]="profileInfoForm">
       <div class="row field-row-sep">
         <div class="col-sm-6">
-          <label for="inputPassword">Smoking:</label>
+          <label for="inputPassword">{{ 'Smoking' | translate }}</label>
           <div class="radio">
-            <label><input type="radio" value="regularly" name="smoking" formControlName="smoking">Regularly</label>
+            <label><input type="radio" value="regularly" name="smoking" formControlName="smoking">{{ 'Regularly' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="sometimes" name="smoking" formControlName="smoking">Sometimes</label>
+            <label><input type="radio" value="sometimes" name="smoking" formControlName="smoking">{{ 'Sometimes' | translate }}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="never" name="smoking" formControlName="smoking">Never</label>
+            <label><input type="radio" value="never" name="smoking" formControlName="smoking">{{ 'Never' | translate}}</label>
           </div>
           <div>
             <small *ngIf="smoking.invalid && (smoking.dirty || smoking.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
         <div class="col-sm-6">
-          <label for="inputPassword">Drinking:</label>
+          <label for="inputPassword">{{ 'Drinking' | translate }}</label>
           <div class="radio">
-            <label><input type="radio" value="regularly" name="drinking" formControlName="drinking">Regularly</label>
+            <label><input type="radio" value="regularly" name="drinking" formControlName="drinking">{{ 'Regularly' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="sometimes" name="drinking" formControlName="drinking">Socially</label>
+            <label><input type="radio" value="sometimes" name="drinking" formControlName="drinking">{{ 'Socially' | translate }}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="never" name="drinking" formControlName="drinking">Never</label>
+            <label><input type="radio" value="never" name="drinking" formControlName="drinking">{{ 'Never' | translate}}</label>
           </div>
           <div>
             <small *ngIf="drinking.invalid && (drinking.dirty || drinking.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
@@ -162,39 +162,39 @@
 
       <div class="row field-row-sep">
         <div class="col-sm-6">
-          <label for="inputPassword">Do you have children?</label>
+          <label for="inputPassword">{{ 'Do you have children?' | translate }}</label>
 
           <div class="radio">
-            <label><input type="radio" value="has" name="children_status" formControlName="children_status">Yes</label>
+            <label><input type="radio" value="has" name="children_status" formControlName="children_status">{{ 'Yes' | translate }}</label>
           </div>
           <div class="radio">
             <label><input type="radio" value="does_not_have" name="children_status"
-                formControlName="children_status">No</label>
+                formControlName="children_status">{{ 'No' | translate }}</label>
           </div>
           <div>
             <small *ngIf="children_status.invalid && (children_status.dirty || children_status.touched)"
               class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
         <div class="col-sm-6">
-          <label for="inputPassword">Do you have pets?</label>
+          <label for="inputPassword">{{ 'Do you have pets?' | translate }}</label>
           <div class="radio">
-            <label><input type="radio" value="cat" name="pet_status" formControlName="pet_status">Cat(s)</label>
+            <label><input type="radio" value="cat" name="pet_status" formControlName="pet_status">{{ 'Cat(s)' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="dog" name="pet_status" formControlName="pet_status">Dog(s)</label>
+            <label><input type="radio" value="dog" name="pet_status" formControlName="pet_status">{{ 'Dog(s)' | translate }}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="other" name="pet_status" formControlName="pet_status">Other(s)</label>
+            <label><input type="radio" value="other" name="pet_status" formControlName="pet_status">{{ 'Other(s)' | translate }}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="none" name="pet_status" formControlName="pet_status">None</label>
+            <label><input type="radio" value="none" name="pet_status" formControlName="pet_status">{{ 'None' | translate }}</label>
           </div>
           <div>
             <small *ngIf="pet_status.invalid && (pet_status.dirty || pet_status.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
@@ -202,35 +202,35 @@
 
       <div class="row">
         <div class="col-sm-6">
-          <label for="inputPassword">Body type:</label>
+          <label for="inputPassword">{{ 'Body type' | translate }}</label>
           <div class="radio">
-            <label><input type="radio" value="fit" name="body" formControlName="body">Fit</label>
+            <label><input type="radio" value="fit" name="body" formControlName="body">{{ 'Fit' | translate }}</label>
           </div>
           <div class="radio">
-            <label><input type="radio" value="curvy" name="body" formControlName="body">Curvy</label>
+            <label><input type="radio" value="curvy" name="body" formControlName="body">{{ 'Curvy' | translate }}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="average" name="body" formControlName="body">Average</label>
+            <label><input type="radio" value="average" name="body" formControlName="body">{{ 'Average' | translate}}</label>
           </div>
           <div class="radio disabled">
-            <label><input type="radio" value="skinny" name="body" formControlName="body">Skinny</label>
+            <label><input type="radio" value="skinny" name="body" formControlName="body">{{ 'Skinny' | translate }}</label>
           </div>
           <div>
             <small *ngIf="body.invalid && (body.dirty || body.touched)" class="text-danger">
-              Required field
+              {{ 'Required field' | translate }}
             </small>
           </div>
         </div>
         <div class="col-sm-6">
-          <label>Height:</label>
+          <label>{{ 'Height' | translate}}</label>
           <div>
             <input type="number" class="form-control" formControlName="height" name="height"
               style="width: 70px; display: inline-block;">
-            cm
+            {{ 'cm' | translate }}
           </div>
           <div>
             <small *ngIf="height.invalid && (height.dirty || height.touched)" class="text-danger">
-              Invalid height
+              {{ 'Invalid height' | translate }}
             </small>
           </div>
         </div>
@@ -238,57 +238,57 @@
     </form>
 
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveProfileInfo()">Save</button>
+      <button class="btn btn-primary" (click)="saveProfileInfo()">{{ 'Save' | translate}}</button>
       <div class="clearfix"></div>
     </div>
   </div>
 </div>
 
 <div *ngIf="3 == step">
-  <h2 class="section-title">Interests ({{targetStep}})</h2>
+  <h2 class="section-title">{{ 'Interests' | translate }} ({{ 'Step' | translate }} {{ step + '/' + TOTAL_STEPS }})</h2>
   <div class="onboarding-step-cont rounded shadow-sm">
     <div style="margin-bottom: 25px;">
       <hobbie-picker [selectedHobbies]="selectedHobbies" [list]="allHobbies" type="hobbies"
         (changed)="hobbiesChanged($event)"></hobbie-picker>
       <small *ngIf="hobbies.invalid && (hobbies.dirty || hobbies.touched)" class="text-danger">
-        Choose at least 1 hobbie
+        {{ 'Choose at least 1 hobbie' | translate }}
       </small>
     </div>
     <div style="margin-bottom: 25px;">
       <hobbie-picker [selectedHobbies]="selectedActivities" [list]="allActivities" type="activities"
         (changed)="interestsChanged($event)"></hobbie-picker>
       <small *ngIf="activities.invalid && (activities.dirty || activities.touched)" class="text-danger">
-        Choose at least 1 activity
+        {{ 'Choose at least 1 activity' | translate }}
       </small>
     </div>
 
     <div class="btn-cont">
-      <button class="btn btn-primary" (click)="saveInterests()" [disabled]="loading">Save</button>
+      <button class="btn btn-primary" (click)="saveInterests()" [disabled]="loading">{{ 'Save' | translate }}</button>
       <div class="clearfix"></div>
     </div>
   </div>
 </div>
 
 <div *ngIf="4 == step" style="padding-top: 20px;">
-  <h2 *ngIf="!quizComplete" class="section-title">Personality Quiz ({{targetStep}})</h2>
+  <h2 *ngIf="!quizComplete" class="section-title">{{ 'Personality Quiz' | translate }} ({{ 'Step' | translate }} {{ step + '/' + TOTAL_STEPS }})</h2>
 
   <div *ngIf="showQuizIntroText">
     <div class="alert alert-info" role="alert">
-      The goal of the personality quiz is to determine part of what your personality and beliefs are so that
-      we can find better matches for you. <br />
-      To find a better match try to answer honestly.
+      {{ 'The goal of the personality quiz is to determine part of what your personality and beliefs are so that
+      we can find better matches for you.' | translate }} <br/>
+      {{ 'To find a better match try to answer honestly.' | translate }}
     </div>
     <div class="info-button-cont">
-      <button class="btn btn-primary" (click)="showQuizIntroText = false">Start Quiz</button>
+      <button class="btn btn-primary" (click)="showQuizIntroText = false">{{ 'Start Quiz' | translate}}</button>
     </div>
   </div>
 
   <div *ngIf="!showQuizIntroText && quizComplete">
     <div class="alert alert-success" role="alert">
-      You have successfully completed the onboarding!
+      {{ 'You have successfully completed the onboarding!' | translate }}
     </div>
     <div class="info-button-cont">
-      <button class="btn btn-success" (click)="handleComplete()">Done</button>
+      <button class="btn btn-success" (click)="handleComplete()">{{ 'Done' | translate }}</button>
     </div>
   </div>
 
@@ -299,23 +299,23 @@
     <form [formGroup]="quizForm">
       <div *ngFor="let question of stepQustions(quizStep); let ix = index" class="form-group">
         <label for="inputPassword">
-          {{question.text}}
+          {{ question.text | translate }}
         </label>
         <div style="margin-bottom: 25px; margin-left: 20px;">
           <div *ngFor="let answer of question.answers" class="radio">
             <label>
               <input type="radio" [value]="answer.id" [name]="question.id" [formControlName]="question.id">
-              {{answer.text}}
+              {{ answer.text | translate }}
             </label>
           </div>
           <small *ngIf="quest(question.id).invalid && (quest(question.id).dirty || quest(question.id).touched)"
             class="text-danger">
-            Required field
+            {{ 'Required field' | translate }}
           </small>
         </div>
       </div>
     </form>
 
-    <button class="btn btn-primary" (click)="saveQuiz()">Next</button>
+    <button class="btn btn-primary" (click)="saveQuiz()">{{ 'Next' | translate }}</button>
   </div>
 </div>
