--- a/src/app/components/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/components/pages/sign-up-page/sign-up-page.component.html
@@ -7,7 +7,7 @@
 
   <div class="auth-cont">
     <div style="padding: 10px">
-      <h1>Sign up</h1>
+      <h1>{{ 'Sign up' | translate }}</h1>
       <div *ngIf="!showForm">
         <div>User created successfully</div>
         <button class="btn btn-light" type="button" (click)="login()">Go to login</button>
@@ -19,36 +19,36 @@
             <input type="email"
                    class="form-control"
                    name="email"
-                   placeholder="Email"
+                   placeholder="{{ 'Email' | translate }}"
                    formControlName="email"
                    [ngClass]="{'error-inp': ((email.dirty || email.touched) && !email.valid)}"
                    [readonly]="loading"
                    required>
 
             <small class="text-danger" *ngIf="(email.dirty || email.touched) && !email.valid" class="text-danger">
-              <div *ngIf="email.hasError('required')">Email is required.</div>
-              <div *ngIf="email.hasError('email')">Email is invalid.</div>
-              <div *ngIf="email.hasError('exists')">Email is already registered.</div>
+              <!-- <div *ngIf="email.hasError('required')">Email is required.</div> -->
+              <div *ngIf="email.hasError('email') || email.hasError('required')">{{ 'Invalid email' | translate }}</div>
+              <div *ngIf="email.hasError('exists')">{{ 'Email is already registered' | translate }}</div>
             </small>
           </div>
           <div class="form-group inp-cont">
             <input type="text"
                    class="form-control"
                    name="name"
-                   placeholder="Name"
+                   placeholder="{{ 'Name' | translate }}"
                    formControlName="name"
                    [ngClass]="{'error-inp': ((name.dirty || name.touched) && !name.valid)}"
                    [readonly]="loading"
                    required>
             <small class="text-danger" *ngIf="(name.dirty || name.touched) && !name.valid" class="text-danger">
-              Name is invalid.
+              {{ 'Invalid name' | translate }}
             </small>
           </div>
           <div class="form-group inp-cont">
             <input type="password"
                    class="form-control auth-inp"
                    name="password"
-                   placeholder="Password"
+                   placeholder="{{ 'Password' | translate }}"
                    formControlName="password"
                    [ngClass]="{'error-inp': ((password.dirty || password.touched) && !password.valid)}"
                    [readonly]="loading"
@@ -57,7 +57,7 @@
             <small class="text-danger" *ngIf="(password.dirty || password.touched) && !password.valid" class="text-danger">
               <div class="alert alert-warning">
                 <div class="pwd-item">
-                  <fa-icon *ngIf="password.value.length >= 8" [icon]="faCheck"></fa-icon> 8+ length
+                  <fa-icon *ngIf="password.value.length >= 8" [icon]="faCheck"></fa-icon> 8+ {{ 'length' | translate }}
                 </div>
                 <div class="pwd-item">
                   <fa-icon *ngIf="hasUppercase(password.value)" [icon]="faCheck"></fa-icon> [A-Z]
@@ -72,26 +72,26 @@
                   <fa-icon *ngIf="hasSpecialChar(password.value)" [icon]="faCheck"></fa-icon> [#?!@$%^&*-]
                 </div>
               </div>
-              <div>Password is invalid.</div>
+              <div>{{ 'Invalid password' | translate }}</div>
             </small>
           </div>
           <div class="form-group inp-cont">
             <input type="password"
                    class="form-control auth-inp"
                    name="confirmPassword"
-                   placeholder="Confirm password"
+                   placeholder="{{ 'Confirm password' | translate }}"
                    formControlName="confirmPassword"
                    [ngClass]="{'error-inp': ((confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid)}"
                    [readonly]="loading"
                    required>
 
             <small class="text-danger" *ngIf="(confirmPassword.dirty || confirmPassword.touched) && !confirmPassword.valid" class="text-danger">
-              Confirm password
+              {{ 'Confirm password' | translate }}
             </small>
           </div>
-          <button class="btn btn-outline-primary" type="submit" [disabled]="loading">Sign up</button>
+          <button class="btn btn-outline-primary" type="submit" [disabled]="loading">{{ 'Sign up' | translate }}</button>
           <div style="margin: 15px 0">
-            If you already have an account you can <a routerLink="/login">sign in here</a>.
+            {{ 'If you already have an account you can' | translate }} <a routerLink="/login">{{ 'sign in here' | translate }}</a>.
           </div>
         </form>
       </div>
