--- a/src/app/components/user-item/user-item.component.html
+++ b/src/app/components/user-item/user-item.component.html
@@ -6,14 +6,14 @@
     <div class="item-overlay rounded">
       <div class="text-container">
         <div class="text-truncate" style="font-size: initial;">
-          {{user.name}}, {{user.age}} <verified-badge *ngIf="user.verified"></verified-badge>
+          {{ user.name }}, {{ user.age }} <verified-badge *ngIf="user.verified"></verified-badge>
         </div> 
-        <div class="text-truncate" *ngIf="user.mutual_hobbies_count" style="line-height: 14px;">{{user.mutual_hobbies_count}} mutual interests</div>
-        <div class="text-truncate" *ngIf="user.mutual_ativities_count" style="line-height: 14px;">{{user.mutual_ativities_count}} mutual activities</div>
-        <div class="text-truncate" *ngIf="user.from" style="line-height: 14px; margin-top: 5px">{{user.from}}</div>
+        <div class="text-truncate" *ngIf="user.mutual_hobbies_count" style="line-height: 14px;">{{ user.mutual_hobbies_count }} {{ 'mutual interests' | translate }}</div>
+        <div class="text-truncate" *ngIf="user.mutual_ativities_count" style="line-height: 14px;">{{ user.mutual_ativities_count }} {{ 'mutual activities' | translate }}</div>
+        <div class="text-truncate" *ngIf="user.from" style="line-height: 14px; margin-top: 5px">{{ user.from }}</div>
       </div>
     </div>
 
-    <span *ngIf="user.compatability" class="badge badge-pill badge-secondary compatability-badge" title="Compatability percentage to me" style="position: absolute; right: 5px; top: 5px;">{{user.compatability}}%</span>
+    <span *ngIf="user.compatability" class="badge badge-pill badge-secondary compatability-badge" title="{{ 'Compatability percentage to me' | translate }}" style="position: absolute; right: 5px; top: 5px;">{{ user.compatability }}%</span>
   </div>
 </div>
